--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,8 +8,15 @@ nav {
     align-items: center;
     position: sticky;
     top: 0%;
-    background-color: $first;
+
+    background-color: rgba($first, .5);
     z-index: 10;
+    transition: all .5s ease;
+
+    &:hover {
+        background-color: $first;
+
+    }
 
     >h1 {
         text-transform: uppercase;
@@ -24,9 +31,12 @@ nav {
         >a {
             color: $dark;
             margin: 1rem;
+            transition: .5s all ease;
+            font-weight: 600;
 
             &:hover {
                 color: $third;
+                font-size: 1.2rem;
             }
         }
     }
